--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -519,6 +519,7 @@ footer {
     color: $light-color;
     text-align: center;
     padding: 2rem 0;
+    text-transform: none;
   }
 }
 // footer section ends
