--- a/src/css/index.css
+++ b/src/css/index.css
@@ -287,6 +287,7 @@ header .icons svg:hover {
   color: #666;
   padding-bottom: 1rem;
   text-align: justify;
+  text-transform: none;
 }
 .recent .container .box .content .link {
   color: #f2c94c;
@@ -529,6 +530,7 @@ footer .copyright {
   color: #666;
   padding-bottom: 1rem;
   text-align: justify;
+  text-transform: none;
 }
 .research-page .container .box .content .link {
   color: #f2c94c;
@@ -593,8 +595,10 @@ footer .copyright {
   margin: 1rem 0;
 }
 .readMore article {
+  margin: 2rem 0;
   font-size: 1.5rem;
   line-height: 1.6;
+  text-transform: none;
 }
 
 .contact-form form {
