--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -351,6 +351,7 @@ header {
           color: $light-color;
           padding-bottom: 1rem;
           text-align: justify;
+          text-transform: none;
         }
         .link {
           color: $yellow;
@@ -634,6 +635,7 @@ footer {
           color: $light-color;
           padding-bottom: 1rem;
           text-align: justify;
+          text-transform: none;
         }
         .link {
           color: $yellow;
@@ -709,8 +711,10 @@ footer {
     margin: 1rem 0;
   }
   article {
+    margin: 2rem 0;
     font-size: 1.5rem;
     line-height: 1.6;
+    text-transform: none;
   }
 }
 // readMore style ends
