--- a/src/css/index.css
+++ b/src/css/index.css
@@ -341,6 +341,8 @@ header .icons svg:hover {
 }
 .our-team .container .box:hover {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  background: #f2c94c;
 }
 .our-team .container .box .image {
   height: 30rem;
@@ -477,7 +479,7 @@ footer .copyright {
 }
 .about-us-card ul li {
   list-style-type: square;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   line-height: 1.6;
   letter-spacing: 0.1rem;
   padding: 0.2rem 0;
@@ -486,10 +488,10 @@ footer .copyright {
   text-transform: none;
 }
 .about-us-card h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 .about-us-card article {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 1.6;
   letter-spacing: 0.1rem;
   padding: 0.2rem 0;
@@ -564,6 +566,8 @@ footer .copyright {
 }
 .our-team-main .container .box:hover {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  background: #f2c94c;
 }
 .our-team-main .container .box .image {
   height: 30rem;
@@ -586,14 +590,6 @@ footer .copyright {
 .our-team-main .container .box .content .title {
   padding: 0.5rem 0;
   font-size: 2.5rem;
-}
-.our-team-main .container .box .content article {
-  font-size: 1.2rem;
-  color: rgb(0, 0, 0);
-  font-weight: 500;
-  line-height: 1.8rem;
-  letter-spacing: 0.1rem;
-  text-transform: none;
 }
 
 .readMore img {
