--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -431,6 +431,12 @@ header {
       .content {
         padding: 2rem;
         text-align: center;
+        &:hover {
+          p,
+          h3 {
+            color: $white;
+          }
+        }
         p {
           color: $light-color;
           font-size: 1.5rem;
@@ -737,6 +743,13 @@ footer {
       .content {
         padding: 2rem;
         text-align: center;
+
+        &:hover {
+          p,
+          h3 {
+            color: $white;
+          }
+        }
         p {
           color: $light-color;
           font-size: 1.5rem;
