--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -458,11 +458,11 @@ header {
     }
   }
   .modal {
-    position: relative;
+    // position: relative;
     .closeBtn {
       color: $black;
       position: absolute;
-      top: 33%;
+      top: 17%;
       right: 11%;
       font-size: 2.5rem;
     }
@@ -474,7 +474,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #00000094;
+    background: #000000d8;
     // background: red;
     width: 100vw;
     height: 100vh;
@@ -484,9 +484,12 @@ header {
       gap: 2rem;
       padding: 5rem 2rem 1rem;
       border-radius: 0.5rem;
+      height: 70vh;
+      overflow: auto;
 
       .img {
         flex: 1 1 20rem;
+        height: 30rem;
         border-radius: 1rem;
         overflow: hidden;
         // height: 10rem;
@@ -498,6 +501,27 @@ header {
       }
       .content {
         flex: 3 1 30rem;
+        height: 30rem;
+        padding: 0 2rem;
+        // overflow-y: scroll;
+
+        .name {
+          font-weight: bold;
+          font-size: 2rem;
+          margin-bottom: 1rem;
+        }
+        p {
+          text-transform: none;
+          margin-top: 2rem;
+          padding-bottom: 2rem;
+          color: #000;
+          font-size: 1.2rem;
+          font-weight: 600;
+          letter-spacing: 0.1rem;
+          line-height: 1.6;
+          // text-align: justify;
+          // overflow-y: scroll;
+        }
       }
     }
   }
@@ -772,11 +796,11 @@ footer {
     }
   }
   .modal {
-    position: relative;
+    // position: relative;
     .closeBtn {
       color: $black;
       position: absolute;
-      top: 33%;
+      top: 17%;
       right: 11%;
       font-size: 2.5rem;
     }
@@ -788,7 +812,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #00000094;
+    background: #000000d8;
     // background: red;
     width: 100vw;
     height: 100vh;
@@ -798,9 +822,12 @@ footer {
       gap: 2rem;
       padding: 5rem 2rem 1rem;
       border-radius: 0.5rem;
+      height: 70vh;
+      overflow: auto;
 
       .img {
         flex: 1 1 20rem;
+        height: 30rem;
         border-radius: 1rem;
         overflow: hidden;
         // height: 10rem;
@@ -812,6 +839,27 @@ footer {
       }
       .content {
         flex: 3 1 30rem;
+        height: 30rem;
+        padding: 0 2rem;
+        // overflow-y: scroll;
+
+        .name {
+          font-weight: bold;
+          font-size: 2rem;
+          margin-bottom: 1rem;
+        }
+        p {
+          text-transform: none;
+          margin-top: 2rem;
+          padding-bottom: 2rem;
+          color: #000;
+          font-size: 1.2rem;
+          font-weight: 600;
+          letter-spacing: 0.1rem;
+          line-height: 1.6;
+          // text-align: justify;
+          // overflow-y: scroll;
+        }
       }
     }
   }
