--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -467,7 +467,7 @@ header {
       font-size: 2.5rem;
     }
     position: fixed;
-    top: 5rem;
+    top: 0rem;
     left: 0;
     bottom: 0;
     right: 0;
@@ -478,6 +478,7 @@ header {
     // background: red;
     width: 100vw;
     height: 100vh;
+    z-index: 1000;
     .modal-container {
       background: $bg;
       display: flex;
@@ -805,7 +806,7 @@ footer {
       font-size: 2.5rem;
     }
     position: fixed;
-    top: 5rem;
+    top: 0rem;
     left: 0;
     bottom: 0;
     right: 0;
@@ -816,6 +817,7 @@ footer {
     // background: red;
     width: 100vw;
     height: 100vh;
+    z-index: 1000;
     .modal-container {
       background: $bg;
       display: flex;
