--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -819,6 +819,43 @@ footer {
   }
 }
 
+// donate starts
+.donate {
+  background: url("../images/donate2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: local;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+  .content {
+    transform: translateY(20rem);
+    width: 70%;
+    h3,
+    h1 {
+      color: $white;
+      font-size: 5rem;
+      font-weight: 900;
+      text-shadow: 0.2rem 0.2rem black;
+      line-height: 1.5;
+      letter-spacing: 0.1rem;
+    }
+  }
+}
+// donate ends
+
 // media queries
 @media all and (max-width: 991px) {
   html {
